[package]
name = "rust-wasm-audio"
version = "0.1.0"
authors = ["Ryosuke Hana"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
# console_error_panic_hook = { version = "0.1.6", optional = true }
# web-sys = { version = "0.3.77", features = ["console"] }
